<resources>
    <string name="about">About</string>
    <string name="about_location_flickr">Flickr\n\nAn Application to find Flickr images near you.\n\nVersion: %1$d</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Location Flickr</string>

    <string name="connection_error">Server connection failed</string>

    <string name="description">Description:</string>

    <string name="failed_connection">Connection failed.</string>
    <string name="failed_to_retrieve_data">Image retrieval failure.</string>
    <string name="full_image">Full Image</string>

    <string name="gps_and_network_disabled">GPS and Network disabled!</string>

    <string name="hello_world">Hello world!</string>

    <string name="last_page">No more pages to load.</string>
    <string name="location">Location:</string>
    <string name="location_error">Location error!</string>

    <string name="no_connection">No connection.</string>
    <string name="no_thumbnails">Unable to retrieve the Thumbnails.</string>
    <string name="not_available">N/A</string>

    <string name="ok">OK</string>
    <string name="original_secret_header">Original secret:</string>

    <string name="posted_date_header">Posted:</string>

    <string name="refresh_page">Refresh</string>
    <string name="refreshing_please_wait">ReSyncing data.  Please wait.</string>

    <string name="secret_header">Secret:</string>
    <string name="sync_in_progress">Sync already in progress!</string>

    <string name="taken_date_header">Taken:</string>
    <string name="thumbnail_failed">Thumbnail retrieval failed.</string>
    <string name="title_activity_image_detail_view">ImageDetailView</string>

    <string name="url_creation_failed">Invalid URL</string>
    <string name="users_name_header">User name:</string>

    <string name="view_count">Views:</string>
</resources>